; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/chipidea/extr_otg.c_ci_hdrc_otg_destroy.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/chipidea/extr_otg.c_ci_hdrc_otg_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ci_hdrc = type { i64 }

@OTGSC_INT_EN_BITS = common dso_local global i32 0, align 4
@OTGSC_INT_STATUS_BITS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ci_hdrc_otg_destroy(%struct.ci_hdrc* %0) #0 {
  %2 = alloca %struct.ci_hdrc*, align 8
  store %struct.ci_hdrc* %0, %struct.ci_hdrc** %2, align 8
  %3 = load %struct.ci_hdrc*, %struct.ci_hdrc** %2, align 8
  %4 = getelementptr inbounds %struct.ci_hdrc, %struct.ci_hdrc* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %16

7:                                                ; preds = %1
  %8 = load %struct.ci_hdrc*, %struct.ci_hdrc** %2, align 8
  %9 = getelementptr inbounds %struct.ci_hdrc, %struct.ci_hdrc* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @flush_workqueue(i64 %10)
  %12 = load %struct.ci_hdrc*, %struct.ci_hdrc** %2, align 8
  %13 = getelementptr inbounds %struct.ci_hdrc, %struct.ci_hdrc* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @destroy_workqueue(i64 %14)
  br label %16

16:                                               ; preds = %7, %1
  %17 = load %struct.ci_hdrc*, %struct.ci_hdrc** %2, align 8
  %18 = load i32, i32* @OTGSC_INT_EN_BITS, align 4
  %19 = load i32, i32* @OTGSC_INT_STATUS_BITS, align 4
  %20 = or i32 %18, %19
  %21 = load i32, i32* @OTGSC_INT_STATUS_BITS, align 4
  %22 = call i32 @hw_write_otgsc(%struct.ci_hdrc* %17, i32 %20, i32 %21)
  %23 = load %struct.ci_hdrc*, %struct.ci_hdrc** %2, align 8
  %24 = call i64 @ci_otg_is_fsm_mode(%struct.ci_hdrc* %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %16
  %27 = load %struct.ci_hdrc*, %struct.ci_hdrc** %2, align 8
  %28 = call i32 @ci_hdrc_otg_fsm_remove(%struct.ci_hdrc* %27)
  br label %29

29:                                               ; preds = %26, %16
  ret void
}

declare dso_local i32 @flush_workqueue(i64) #1

declare dso_local i32 @destroy_workqueue(i64) #1

declare dso_local i32 @hw_write_otgsc(%struct.ci_hdrc*, i32, i32) #1

declare dso_local i64 @ci_otg_is_fsm_mode(%struct.ci_hdrc*) #1

declare dso_local i32 @ci_hdrc_otg_fsm_remove(%struct.ci_hdrc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
